# calc-cli

./: Cargo.toml  LICENSE  README.md
src/: bitwise.rs  calc.rs  lib.rs  main.rs  math.rs
