[package]
name = "rfcalc"
version = "0.2.1"
edition = "2021"
authors = ["R4 Cheng <schaffenneu47@gmail.com>"]
license = "MIT"
description = "A tool to calculate things"
readme = "README.md"
homepage = "https://github.com/chengr4/calc-cli"
repository = "https://github.com/chengr4/calc-cli"
keywords = ["calculator", "math", "cli"]
categories = ["cli", "math", "calculator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
